<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <EditText
        android:id="@+id/Text3"
        android:layout_width="286dp"
        android:layout_height="56dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="172dp"
        android:layout_marginEnd="101dp"
        android:ems="10"
        android:hint="Email"
        android:imeOptions="@string/Text3"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Text4"
        android:layout_width="286dp"
        android:layout_height="56dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="248dp"
        android:layout_marginEnd="101dp"
        android:ems="10"
        android:hint="@string/Text4"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Text5"
        android:layout_width="286dp"
        android:layout_height="56dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="324dp"
        android:layout_marginEnd="101dp"
        android:ems="10"
        android:hint="@string/Text5"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Text6"
        android:layout_width="286dp"
        android:layout_height="56dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="101dp"
        android:ems="10"
        android:hint="@string/Text6"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Text2"
        android:layout_width="286dp"
        android:layout_height="56dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="101dp"
        android:ems="10"
        android:hint="@string/Text2"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="111dp"
        android:layout_height="54dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="504dp"
        android:text="@string/button3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="111dp"
        android:layout_height="53dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="32dp"
        android:text="@string/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />
</androidx.constraintlayout.widget.ConstraintLayout>